# aur-helper

./: .gitignore  Cargo.toml  README.MD  publish.sh
.github/workflows/: release.yml
src/: main.rs
src/core/: config.rs  mod.rs  models.rs  shared.rs
src/core/services/: mod.rs  package_manager.rs  validator.rs
src/pages/: check_env.rs  dashboard.rs  mod.rs
src/ui_components/: mod.rs
