[package]
name = "aur-helper"
version = "0.1.0"
edition = "2021"
authors = ["Thiago Luciano <tlsilva89>"]
description = "Gerenciador de pacotes AUR moderno para Arch Linux"
repository = "https://github.com/tlsilva89/aur-helper"
license = "MIT"

[[bin]]
name = "aur-helper"
path = "src/main.rs"

[dependencies]
iced = { version = "0.13", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
